--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>UP Voting Delegation - Unlock Protocol</title>
-    <meta name="description" content="Delegate your Unlock Protocol (UP) voting rights on Base network to trusted stewards or custom addresses." />
+    <title>XFI-Safe</title>
+    <meta name="description" content="Save and earn yield on yoyr deposit" />
   </head>
   <body>
     <div id="root"></div>
